Basic functionality and simple styling added.

--- a/popup.html
+++ b/popup.html
@@ -3,6 +3,9 @@
   <head>
     <title>Exploration Inspiration</title>
     <script src="background.js"></script>
+    <script src="math.js" type="text/javascript"></script>
+    <link href="https://fonts.googleapis.com/css?family=Overpass" rel="stylesheet">
+    <link rel= "stylesheet" href= "style.css">
   </head>
   <body>
     <h1>Exploration Inspiration</h1>
