Added some styling and another option at Emily's suggestion.

--- a/popup.html
+++ b/popup.html
@@ -8,7 +8,9 @@
     <link rel= "stylesheet" href= "style.css">
   </head>
   <body>
-    <h1>Exploration Inspiration</h1>
-    <button id="checkPage">Inspire Me.</button>
+    <h2>Inpsiration for</h2>
+    <h1>Exploratory</h1>
+    <h3>Testing</h3>
+    <button id="checkPage">Inspire Me</button>
   </body>
 </html>
