Updated styling, ready to package it up.

--- a/popup.html
+++ b/popup.html
@@ -8,9 +8,12 @@
     <link rel= "stylesheet" href= "style.css">
   </head>
   <body>
-    <h2>Inpsiration for</h2>
-    <h1>Exploratory</h1>
-    <h3>Testing</h3>
-    <button id="checkPage">Inspire Me</button>
+    <h2>Inspiration for...</h2>
+    <h1>Exploratory Testing</h1>
+    <button id="inspire">Inspire Me!</button>
+    <br>
+    <br>
+    <p id="result"></p>
+    <br>
   </body>
 </html>
